# fondat-postgresql

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
fondat/: postgres.py  postgresql.py
roax/: postgresql.py
tests/: test_postgres.py  test_postgresql.py
