[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']

[tool.poetry]
name = "roax-postgresql"
module = "roax.postgresql"
version = "2.0a1"
description = "PostgreSQL extension for Roax."
readme = "README.md"
authors = ["Paul Bryan <pbryan@anode.ca>"]
homepage = "https://github.com/roax/roax-postgres/"
documentation = "https://github.com/roax/roax-postgres/wiki"
license = "MIT"
keywords = ["wsgi", "framework", "resource", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
packages = [
    { include = "roax" }
]

[tool.poetry.dependencies]
python = "^3.7"
roax = "^2.0a2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
pre-commit = "^1.18"
pytest = "^5.1"
pytest-cov = "^2.7"
