[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.poetry]
name = "fondat-postgres"
version = "3.0a1"
description = "PostgreSQL module for Fondat."
readme = "README.md"
authors = ["Fondat-Postgres authors"]
homepage = "https://github.com/fondat/fondat-postgres/"
documentation = "https://github.com/fondat/fondat-postgres/wiki"
license = "MIT"
keywords = ["asgi", "framework", "resource", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "fondat" }
]

[tool.poetry.dependencies]
python = "^3.9"
fondat-core = "^3.0a3"
asyncpg = "^0.21"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.9"
pytest = "^6.2"
pytest-asyncio = "^0.14"
pytest-cov = "^2.10"
